--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title: My GitHub Site
-description: A simple GitHub Pages site powered by Jekyll
+title: Tao Xu’s Blog
+description: Notes on math, stats, philosophy, and life
 theme: minima
 # url: https://example.com   # <-- set this if you use a custom domain
 # baseurl: ""                # <-- set this if you deploy under a subpath
